# investment_simulator

./: Cargo.toml
src/: main.rs
src/pages/: ibfl_functions.rs  ibfp_functions.rs  main_page.rs  product_page.rs  simulation_page.rs
